crates/glyph-cli/tests/corpus/invalid/applies_with_args.glyph
block my_block()
    description: "Test block."
    flow:
        "Do something."

skill main()
    description: "Main skill."
    flow:
        if my_block.applies(x)
            "Do something."
